# agents_vs_humans_paper

./: .gitattributes  .gitignore  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  DATA_PACKAGE.md  LICENSE  Makefile  README.md  mise.toml  pyproject.toml
.github/workflows/: paper-build.yml
analyses/: README.md
analyses/_template/: README.md  main.py  report.md  summary.json
analyses/helen/: README.md  cohort_funnel.py  cohort_funnel_report.md  cohort_funnel_summary.json  epitope_cache.npz  epitope_cluster.py  esm2_cache.npz  esm2_compute.py  foldseek_cache.npz  foldseek_cluster.py  main.py  report.md  summary.json
analyses/human_vs_agent/: README.md  contingency_tables.txt  headline_stats.json  headline_stats.md  headline_stats.py
analyses/leaderboard/: README.md  build_leaderboards.py  method_winners.csv  team_winners.csv  top10_agent.csv  top10_human.csv  top20_overall.csv
analyses/methods/: README.md  method_outcome_xtab.csv  method_outcome_xtab.py  report.md
analyses/sequence_diversity/: README.md  cohort_identity.json  diversity.py  kmer_entropy_per_design.csv  report.md  within_team_identity.csv
data/: README.md  designs.csv  designs.fasta  designs.parquet
data/controls/: README.md  known_binders.fasta
data/proteinbase/: README.md
docs/: ANALYSES.md  DATA.md  FIGURES.md  GLOSSARY.md  REPRODUCIBILITY.md  STYLE_GUIDE.md
figures/: README.md
paper/: README.md  main.tex  references.bib
references/: README.md  agentic_biology.bib  competitions.bib  methods.bib  trem2.bib
theme/: README.md  STYLE.md  matplotlibrc  mpl_theme.py
(+885 files in other folders)
